# redistimeseries-py

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  test_commands.py  tox.ini
.circleci/: config.yml  create_pypirc.sh
.github/workflows/: check-pypi.yml  publish-pypi.yml
redistimeseries/: __init__.py  _version.py  client.py  client_async.py
