[tool.poetry]
name = "redistimeseries"
version = "1.4.4"
description = "RedisTimeSeries Python Client"
authors = ["Redis <oss@.com>"]
license = "BSD-3-Clause"
readme = "README.md"

classifiers = [
    'Topic :: Database',
    'Programming Language :: Python',
    'Intended Audience :: Developers',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'License :: OSI Approved :: BSD License',
    'Operating System :: OS Independent',
    'Development Status :: 5 - Production/Stable'
]
keywords = ["Redis TimeSeries Extension"]

[tool.poetry.dependencies]
python = "^3.6"
redis = "3.5.3"
importlib-metadata = "^4.0.1"


[tool.poetry.urls]
url = "https://redistimeseries.io"
repository = "https://github.com/RedisTimeSeries/redistimeseries-py"

[tool.poetry.dev-dependencies]
codecov = "^2.1.11"
flake8 = "^3.9.2"
tox = "^3.23.1"
tox-poetry = "^0.3.0"
bandit = "^1.7.0"
vulture = "^2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
